--- a/src/index.bib
+++ b/src/index.bib
@@ -104,3 +104,19 @@ volume = {17},
 year = {2006}
 }
 
+@article{Bender1997,
+abstract = {Medical research workers are making increasing use of logistic regression analysis for binary and ordinal data. The purpose of this paper is to give a non-technical introduction to logistic regression models for ordinal response variables. We address issues such as the global concept and interpretation of logistic models, the model building procedure from a practical point of view, and the assessment of the model adequacy. For illustrative purposes we apply these methods to real data of a study investigating the association between glycosylated haemoglobin and retinopathy. We give some recommendations for the use and assessment of ordinal logistic regression models in medical research.},
+author = {Bender, R and Grouven, U},
+file = {:home/lobiemu/papers/stats/Blender{\_}1997{\_}ordinal{\_}regression{\_}medical{\_}research:},
+isbn = {0035-8819; 0035-8819},
+issn = {0035-8819},
+journal = {Journal of the Royal College of Physicians of London},
+number = {5},
+pages = {546--551},
+pmid = {9429194},
+title = {{Ordinal logistic regression in medical research.}},
+volume = {31},
+year = {1997}
+}
+
+
